Fix styles of menu panel when there’s overflow

--- a/src/components/agreements-create/CreateAgreementsMain.css
+++ b/src/components/agreements-create/CreateAgreementsMain.css
@@ -1,6 +1,6 @@
 .popupBody {
     display: flex;
-    height: 100%;
+    min-height: 100%;
 }
 
 .popupBody > .createMenu {
